# blog.jph.gg

./: .pre-commit-config.yaml  CNAME  publishconf.py  pyproject.toml
.github/workflows/: build-and-deploy.yml
content/: my-first-post.md
